fix(styles): adjust margin-top for main container in various components for better layout on smaller screens

--- a/frontend/ibudget/src/app/budgets/budgets.scss
+++ b/frontend/ibudget/src/app/budgets/budgets.scss
@@ -14,6 +14,7 @@ $header-height: 70px;
 @media (max-width: 768px) {
   .budgets-container {
     margin-left: 0;
+    margin-top: $header-height - 10px;
     height: auto;
   }
 }
