--- a/frontend/ibudget/src/app/categories/categories.scss
+++ b/frontend/ibudget/src/app/categories/categories.scss
@@ -16,6 +16,7 @@ $header-height: 70px;
     margin-left: 0;
     padding: 8px;
     min-width: 0;
+    margin-top: $header-height - 10px;
   }
 
   .category-card {
